<?xml version="1.0"?>
<package>
  <name>pr2_point_head</name>

  <version>0.0.1</version>

  <description>The pr2_point_head package</description>

  <maintainer email="harmish@laas.fr">harmish khambhaita</maintainer>

  <!--  <author email="author_email">author_name</author>  -->

  <license>BSD</license>

  <!--  <url website >http://wiki.ors.org/pr2_point_head</url>  -->

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>actionlib</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>pr2_controllers_msgs</build_depend>
  <build_depend>roscpp</build_depend>

  <run_depend>actionlib</run_depend>
  <run_depend>geometry_msgs</run_depend>
  <run_depend>pr2_controllers_msgs</run_depend>
  <run_depend>roscpp</run_depend>

  <!--  <test_depend>some_pkg</test_depend>  -->

  <!--  <conflict>some_pkg</conflict>  -->

  <!--  <replace>some_pkg</replace>  -->

  <export>
    <!-- <metapackage/> -->

  </export>
</package>